# LLM-PROJECT

./: README.md  pyproject.toml
llm_project/: .gitignore  README.md  autofpga.example.json  requirements.txt
llm_project/autofpga/: __init__.py  agents.py  case_evidence.py  case_regression.py  code_utils.py  config.py  diagnostics.py  doctor.py  example_audit.py  llm_client.py  main.py  manifest.py  pipeline.py  prompt_audit.py  prompt_templates.py  rag.py  tools.py  xdc.py
llm_project/autofpga/prompts/: architect_readme.md  coder_module.md  repair_module.md  testbench_generate.md  testbench_repair.md
llm_project/datasheets/: Xilinx_7Series_Config_Guide.txt
llm_project/examples/: index.json
llm_project/examples/counter_4bit/: README.md  constraints.xdc  expected_manifest.json  requirement.json  tb_top_module.v
llm_project/examples/counter_load_updown/: README.md  constraints.xdc  expected_manifest.json  requirement.json  tb_top_module.v
llm_project/knowledge_base/: board_constraints.txt  board_pins.json  coding_style.txt
llm_project/knowledge_base/xilinx_skill/: README.md  tcl_commands_notes.md  vivado_flow_notes.md  (+1 more)
llm_project/tests/: test_agents.py  test_case_evidence.py  test_case_regression.py  test_code_utils.py  test_config.py  test_diagnostics.py  test_doctor.py  test_example_audit.py  test_llm_client.py  test_main.py  test_manifest.py  test_pipeline.py  test_pipeline_e2e.py  test_prompt_audit.py  test_prompt_templates.py  test_rag.py  test_rag_chroma_smoke.py  test_rag_quality.py  test_rag_real_docs.py  test_tools.py  test_xdc.py
(+4 files in other folders)
